--- a/14 - JavaScript References VS Copying/index-START.html
+++ b/14 - JavaScript References VS Copying/index-START.html
@@ -8,10 +8,20 @@
 
   <script>
     // start with strings, numbers and booleans
+    // let age = 100;
+    // let age2 = age;
+    // console.log(age, age2);
+    // age = 200;
+    // console.log(age, age2);
 
+    // let name = 'Jay';
+    // let name2 = name;
+    // console.log(name, name2);
+    // name = 'lool';
+    // console.log(name , name2);
     // Let's say we have an array
     const players = ['Wes', 'Sarah', 'Ryan', 'Poppy'];
-
+    
     // and we want to make a copy of it.
 
     // You might think we can just do something like this:
